[package]
name = "voxel_engine"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
# WebGPU related dependencies
wgpu = "24.0.1"
winit = "0.29"
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
anyhow = "1.0"

# Math and utility libraries
glam = { version = "0.24", features = ["serde"] }
rand = "0.8"
rand_pcg = "0.3"
noise = "0.8"
lz4 = "1.24"
zstd = "0.13"
rayon = "1.7"
dashmap = "5.5"
crossbeam-channel = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Other utilities
futures = "0.3"
image = "0.24"
flume = "0.11"
once_cell = "1.18"
parking_lot = "0.12"
hashbrown = "0.14"
num_cpus = "1.16.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1